--- a/.vscode/app/index.html
+++ b/.vscode/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VT Solar - บริการติดตั้งโซล่าเซลล์ครบวงจร</title>
+    <title>VERTEX TECHNOLOGY</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
                 <div class="about-layout">
                     <div class="about-text">
                         <h3>ที่มาของเรา</h3>
-                        <p>เราคือ VERTEX TECHNOLOGY PLUS CO, LTD ผู้เชี่ยวชาญด้านพลังงานหมุนเวียน พร้อมให้บริการครบวงจร (One Stop Service) ตั้งแต่ออกแบบ, ติดตั้ง, และซ่อมบำรุงระบบโซลาร์เซลล์และ EV Charger ด้วยทีมงานวิศวกรมืออาชีพและรับประกันผลงานยาวนานถึง 25 ปี</p>
+                        <p>เราคือ VERTEX TECHNOLOGY PLUS CO, LTD ผู้เชี่ยวชาญด้านพลังงานหมุนเวียน พร้อมให้บริการครบวงจร (One Stop Service) ตั้งแต่ออกแบบ, ติดตั้ง, และซ่อมบำรุงระบบโซลาร์เซลล์ ด้วยทีมงานวิศวกรมืออาชีพและรับประกันผลงานยาวนานถึง 25 ปี</p>
                     </div>
                     <div class="about-portfolio">
                         <h3>ตัวอย่างผลงาน</h3>
@@ -86,6 +86,115 @@
                 </div>
             </div>
         </section>
+
+        <section id="promotions" class="promotions-section">
+    <div class="container">
+        <h2>โปรโมชั่นสุดพิเศษ</h2>
+        <div class="promotions-grid">
+
+            <div class="promotion-card">
+                <div class="promo-card-header">
+                    <img src='img/Set-15-kW.png' alt="ชุดโปรโมชั่น 15KW">
+                </div>
+                <div class="promo-card-body">
+                    <h3>ระบบ 15KW (On-Grid)</h3>
+                    <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 9,000-10,000 บาท/เดือน</p>
+                    <div class="promo-price">
+                        <span class="price-label">เริ่มต้นเพียง</span>
+                        <span class="price-amount">295,000</span>
+                        <span class="price-unit">บาท</span>
+                    </div>
+                    <ul class="promo-features">
+                        <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                        <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                        <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                        <li>✓ รับประกันแผง 25 ปี</li>
+                        <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                    </ul>
+                </div>
+                <div class="promo-card-footer">
+                    <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                </div>
+            </div>
+
+            <div class="promotion-card">
+                <div class="promo-card-header">
+                    <img src="img/Set-20-kW.png" alt="ชุดโปรโมชั่น 20KW">
+                </div>
+                <div class="promo-card-body">
+                    <h3>ระบบ 20KW (On-Grid)</h3>
+                    <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 12,000 บาท/เดือน</p>
+                    <div class="promo-price">
+                        <span class="price-label">เริ่มต้นเพียง</span>
+                        <span class="price-amount">330,000</span>
+                        <span class="price-unit">บาท</span>
+                    </div>
+                    <ul class="promo-features">
+                        <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                        <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                        <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                        <li>✓ รับประกันแผง 25 ปี</li>
+                        <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                    </ul>
+                </div>
+                <div class="promo-card-footer">
+                    <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                </div>
+            </div>
+
+            <div class="promotion-card">
+                <div class="promo-card-header">
+                    <img src="img/Set-30-kW.png" alt="ชุดโปรโมชั่น 30KW">
+                </div>
+                <div class="promo-card-body">
+                    <h3>ระบบ 30KW (On-Grid)</h3>
+                    <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 18,000 บาท/เดือน</p>
+                    <div class="promo-price">
+                        <span class="price-label">เริ่มต้นเพียง</span>
+                        <span class="price-amount">480,000</span>
+                        <span class="price-unit">บาท</span>
+                    </div>
+                    <ul class="promo-features">
+                        <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                        <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                        <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                        <li>✓ รับประกันแผง 25 ปี</li>
+                        <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                    </ul>
+                </div>
+                <div class="promo-card-footer">
+                    <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                </div>
+            </div>
+
+            <div class="promotion-card">
+                <div class="promo-card-header">
+                    <img src="img/Set-40-kW.png" alt="ชุดโปรโมชั่น 40KW">
+                </div>
+                <div class="promo-card-body">
+                    <h3>ระบบ 40KW (On-Grid)</h3>
+                    <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 22,000-23,000 บาท/เดือน</p>
+                    <div class="promo-price">
+                        <span class="price-label">เริ่มต้นเพียง</span>
+                        <span class="price-amount">550,000</span>
+                        <span class="price-unit">บาท</span>
+                    </div>
+                    <ul class="promo-features">
+                        <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                        <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                        <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                        <li>✓ รับประกันแผง 25 ปี</li>
+                        <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                    </ul>
+                </div>
+                <div class="promo-card-footer">
+                    <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
 
         <section id="knowledge" class="knowledge-section">
             <div class="container">
