--- a/.vscode/app/index.html
+++ b/.vscode/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header class="main-header">
@@ -44,7 +46,9 @@
                 <div class="about-layout">
                     <div class="about-text">
                         <h3>ที่มาของเรา</h3>
-                        <p>เราคือ VERTEX TECHNOLOGY PLUS CO, LTD ผู้เชี่ยวชาญด้านพลังงานหมุนเวียน พร้อมให้บริการครบวงจร (One Stop Service) ตั้งแต่ออกแบบ, ติดตั้ง, และซ่อมบำรุงระบบโซลาร์เซลล์ ด้วยทีมงานวิศวกรมืออาชีพและรับประกันผลงานยาวนานถึง 25 ปี</p>
+                        <p>เราคือ VERTEX TECHNOLOGY PLUS CO, LTD ผู้เชี่ยวชาญด้านพลังงานหมุนเวียน พร้อมให้บริการครบวงจร
+                            (One Stop Service) ตั้งแต่ออกแบบ, ติดตั้ง, และซ่อมบำรุงระบบโซลาร์เซลล์
+                            ด้วยทีมงานวิศวกรมืออาชีพและรับประกันผลงานยาวนานถึง 25 ปี</p>
                     </div>
                     <div class="about-portfolio">
                         <h3>ตัวอย่างผลงาน</h3>
@@ -58,143 +62,196 @@
             </div>
         </section>
 
-        <section id="services" class="services-section">
+        <section id="promotions" class="promotions-section">
             <div class="container">
                 <h2>บริการของเรา</h2>
                 <div class="promo-grid">
                     <div class="promo-card">
-                        <img src="https://placehold.co/600x400/0056b3/FFFFFF?text=Solar+for+Home" alt="ติดตั้งโซล่าเซลล์สำหรับบ้าน">
+                        <div class="promo-card-header">
+                            <img src="img/Set-3-kW.png" alt="ชุดโปรโมชั่น 3KW">
+                        </div>
                         <div class="card-content">
-                            <h3>ติดตั้งโซล่าเซลล์สำหรับบ้าน</h3>
-                            <p>ลดค่าไฟระยะยาวสำหรับบ้านพักอาศัย ด้วยพลังงานสะอาด ปรึกษาและสำรวจหน้างานฟรี</p>
+                            <h3>บระบบ 3KW (On-Grid)</h3>
+                            <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 1,800-2,000 บาท/เดือน</p>
+                            <div class="promo-price">
+                                <span class="price-label">เริ่มต้นเพียง</span>
+                                <span class="price-amount">75,000</span>
+                                <span class="price-unit">บาท</span>
+                            </div>
+                            <ul class="promo-features">
+                                <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                                <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                                <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                                <li>✓ รับประกันแผง 25 ปี</li>
+                                <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                            </ul>
+                            <div class="promo-card-footer">
+                                <a href="contact.html" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                            </div>
                         </div>
                     </div>
+
                     <div class="promo-card">
-                        <img src="https://placehold.co/600x400/333333/FFFFFF?text=Solar+for+Business" alt="โซลูชันสำหรับธุรกิจ">
+                        <div class="promo-card-header">
+                            <img src="img/Set-5-kW.png" alt="ชุดโปรโมชั่น 5KW">
+                        </div>
                         <div class="card-content">
-                            <h3>โซลูชันสำหรับธุรกิจและโรงงาน</h3>
-                            <p>ออกแบบระบบ Solar Rooftop, Solar Farm เพื่อลดต้นทุนการผลิตและเพิ่มความสามารถในการแข่งขัน</p>
+                            <h3>ระบบ 5KW (On-Grid)</h3>
+                            <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 2,700-3,500 บาท/เดือน</p>
+                            <div class="promo-price">
+                                <span class="price-label">เริ่มต้นเพียง</span>
+                                <span class="price-amount">98,000</span>
+                                <span class="price-unit">บาท</span>
+                            </div>
+                            <ul class="promo-features">
+                                <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                                <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                                <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                                <li>✓ รับประกันแผง 25 ปี</li>
+                                <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                            </ul>
+                            <div class="promo-card-footer">
+                                <a href="contact.html" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                            </div>
                         </div>
                     </div>
+                    
                     <div class="promo-card">
-                        <img src="https://placehold.co/600x400/28a745/FFFFFF?text=EV+Charger" alt="ติดตั้ง EV Charger">
+                        <div class="promo-card-header">
+                            <img src="img/Set-10-kW.png" alt="ชุดโปรโมชั่น 10KW">
+                        </div>
                         <div class="card-content">
-                            <h3>บริการติดตั้ง EV Charger</h3>
-                            <p>รองรับรถยนต์ไฟฟ้า (EV) ทุกรุ่น ทุกยี่ห้อ ติดตั้งอย่างปลอดภัยโดยทีมงานผู้เชี่ยวชาญ</p>
+                            <h3>ระบบ 10KW (On-Grid)</h3>
+                            <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 5,000-5,500 บาท/เดือน</p>
+                            <div class="promo-price">
+                                <span class="price-label">เริ่มต้นเพียง</span>
+                                <span class="price-amount">198,000</span>
+                                <span class="price-unit">บาท</span>
+                            </div>
+                            <ul class="promo-features">
+                                <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                                <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                                <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                                <li>✓ รับประกันแผง 25 ปี</li>
+                                <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                            </ul>
+                            <div class="promo-card-footer">
+                                <a href="contact.html" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+
+
+            <div class="container">
+                <h2>โปรโมชั่นสุดพิเศษ</h2>
+                <div class="promotions-grid">
+
+                    <div class="promotion-card">
+                        <div class="promo-card-header">
+                            <img src='img/Set-15-kW.png' alt="ชุดโปรโมชั่น 15KW">
+                        </div>
+                        <div class="promo-card-body">
+                            <h3>ระบบ 15KW (On-Grid)</h3>
+                            <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 9,000-10,000 บาท/เดือน</p>
+                            <div class="promo-price">
+                                <span class="price-label">เริ่มต้นเพียง</span>
+                                <span class="price-amount">295,000</span>
+                                <span class="price-unit">บาท</span>
+                            </div>
+                            <ul class="promo-features">
+                                <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                                <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                                <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                                <li>✓ รับประกันแผง 25 ปี</li>
+                                <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                            </ul>
+                        </div>
+                        <div class="promo-card-footer">
+                            <a href="contact.html" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                        </div>
+                    </div>
+
+                    <div class="promotion-card">
+                        <div class="promo-card-header">
+                            <img src="img/Set-20-kW.png" alt="ชุดโปรโมชั่น 20KW">
+                        </div>
+                        <div class="promo-card-body">
+                            <h3>ระบบ 20KW (On-Grid)</h3>
+                            <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 12,000 บาท/เดือน</p>
+                            <div class="promo-price">
+                                <span class="price-label">เริ่มต้นเพียง</span>
+                                <span class="price-amount">330,000</span>
+                                <span class="price-unit">บาท</span>
+                            </div>
+                            <ul class="promo-features">
+                                <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                                <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                                <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                                <li>✓ รับประกันแผง 25 ปี</li>
+                                <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                            </ul>
+                        </div>
+                        <div class="promo-card-footer">
+                            <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                        </div>
+                    </div>
+
+                    <div class="promotion-card">
+                        <div class="promo-card-header">
+                            <img src="img/Set-30-kW.png" alt="ชุดโปรโมชั่น 30KW">
+                        </div>
+                        <div class="promo-card-body">
+                            <h3>ระบบ 30KW (On-Grid)</h3>
+                            <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 18,000 บาท/เดือน</p>
+                            <div class="promo-price">
+                                <span class="price-label">เริ่มต้นเพียง</span>
+                                <span class="price-amount">480,000</span>
+                                <span class="price-unit">บาท</span>
+                            </div>
+                            <ul class="promo-features">
+                                <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                                <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                                <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                                <li>✓ รับประกันแผง 25 ปี</li>
+                                <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                            </ul>
+                        </div>
+                        <div class="promo-card-footer">
+                            <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                        </div>
+                    </div>
+
+                    <div class="promotion-card">
+                        <div class="promo-card-header">
+                            <img src="img/Set-40-kW.png" alt="ชุดโปรโมชั่น 40KW">
+                        </div>
+                        <div class="promo-card-body">
+                            <h3>ระบบ 40KW (On-Grid)</h3>
+                            <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 22,000-23,000 บาท/เดือน</p>
+                            <div class="promo-price">
+                                <span class="price-label">เริ่มต้นเพียง</span>
+                                <span class="price-amount">550,000</span>
+                                <span class="price-unit">บาท</span>
+                            </div>
+                            <ul class="promo-features">
+                                <li>✓ แผงโซล่าเซลล์ Tier 1</li>
+                                <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
+                                <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
+                                <li>✓ รับประกันแผง 25 ปี</li>
+                                <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
+                            </ul>
+                        </div>
+                        <div class="promo-card-footer">
+                            <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
-
-        <section id="promotions" class="promotions-section">
-    <div class="container">
-        <h2>โปรโมชั่นสุดพิเศษ</h2>
-        <div class="promotions-grid">
-
-            <div class="promotion-card">
-                <div class="promo-card-header">
-                    <img src='img/Set-15-kW.png' alt="ชุดโปรโมชั่น 15KW">
-                </div>
-                <div class="promo-card-body">
-                    <h3>ระบบ 15KW (On-Grid)</h3>
-                    <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 9,000-10,000 บาท/เดือน</p>
-                    <div class="promo-price">
-                        <span class="price-label">เริ่มต้นเพียง</span>
-                        <span class="price-amount">295,000</span>
-                        <span class="price-unit">บาท</span>
-                    </div>
-                    <ul class="promo-features">
-                        <li>✓ แผงโซล่าเซลล์ Tier 1</li>
-                        <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
-                        <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
-                        <li>✓ รับประกันแผง 25 ปี</li>
-                        <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
-                    </ul>
-                </div>
-                <div class="promo-card-footer">
-                    <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
-                </div>
-            </div>
-
-            <div class="promotion-card">
-                <div class="promo-card-header">
-                    <img src="img/Set-20-kW.png" alt="ชุดโปรโมชั่น 20KW">
-                </div>
-                <div class="promo-card-body">
-                    <h3>ระบบ 20KW (On-Grid)</h3>
-                    <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 12,000 บาท/เดือน</p>
-                    <div class="promo-price">
-                        <span class="price-label">เริ่มต้นเพียง</span>
-                        <span class="price-amount">330,000</span>
-                        <span class="price-unit">บาท</span>
-                    </div>
-                    <ul class="promo-features">
-                        <li>✓ แผงโซล่าเซลล์ Tier 1</li>
-                        <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
-                        <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
-                        <li>✓ รับประกันแผง 25 ปี</li>
-                        <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
-                    </ul>
-                </div>
-                <div class="promo-card-footer">
-                    <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
-                </div>
-            </div>
-
-            <div class="promotion-card">
-                <div class="promo-card-header">
-                    <img src="img/Set-30-kW.png" alt="ชุดโปรโมชั่น 30KW">
-                </div>
-                <div class="promo-card-body">
-                    <h3>ระบบ 30KW (On-Grid)</h3>
-                    <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 18,000 บาท/เดือน</p>
-                    <div class="promo-price">
-                        <span class="price-label">เริ่มต้นเพียง</span>
-                        <span class="price-amount">480,000</span>
-                        <span class="price-unit">บาท</span>
-                    </div>
-                    <ul class="promo-features">
-                        <li>✓ แผงโซล่าเซลล์ Tier 1</li>
-                        <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
-                        <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
-                        <li>✓ รับประกันแผง 25 ปี</li>
-                        <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
-                    </ul>
-                </div>
-                <div class="promo-card-footer">
-                    <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
-                </div>
-            </div>
-
-            <div class="promotion-card">
-                <div class="promo-card-header">
-                    <img src="img/Set-40-kW.png" alt="ชุดโปรโมชั่น 40KW">
-                </div>
-                <div class="promo-card-body">
-                    <h3>ระบบ 40KW (On-Grid)</h3>
-                    <p class="promo-description">ประหยัดค่าไฟเฉลี่ย 22,000-23,000 บาท/เดือน</p>
-                    <div class="promo-price">
-                        <span class="price-label">เริ่มต้นเพียง</span>
-                        <span class="price-amount">550,000</span>
-                        <span class="price-unit">บาท</span>
-                    </div>
-                    <ul class="promo-features">
-                        <li>✓ แผงโซล่าเซลล์ Tier 1</li>
-                        <li>✓ อินเวอร์เตอร์ Huawei / Growatt</li>
-                        <li>✓ รับประกันงานติดตั้ง 3 ปี</li>
-                        <li>✓ รับประกันแผง 25 ปี</li>
-                        <li>✓ ฟรี! ขออนุญาตหน่วยงานราชการ</li>
-                    </ul>
-                </div>
-                <div class="promo-card-footer">
-                    <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
 
         <section id="knowledge" class="knowledge-section">
             <div class="container">
@@ -202,15 +259,18 @@
                 <div class="faq-list">
                     <div class="faq-item">
                         <h4>โซล่าเซลล์ทำงานอย่างไร?</h4>
-                        <p>แผงโซล่าเซลล์จะรับพลังงานแสงอาทิตย์และเปลี่ยนเป็นไฟฟ้ากระแสตรง (DC) จากนั้นอินเวอร์เตอร์จะแปลงเป็นไฟฟ้ากระแสสลับ (AC) เพื่อให้เครื่องใช้ไฟฟ้าในบ้านใช้งานได้</p>
+                        <p>แผงโซล่าเซลล์จะรับพลังงานแสงอาทิตย์และเปลี่ยนเป็นไฟฟ้ากระแสตรง (DC)
+                            จากนั้นอินเวอร์เตอร์จะแปลงเป็นไฟฟ้ากระแสสลับ (AC) เพื่อให้เครื่องใช้ไฟฟ้าในบ้านใช้งานได้</p>
                     </div>
                     <div class="faq-item">
                         <h4>การติดตั้งใช้เวลานานแค่ไหน?</h4>
-                        <p>โดยทั่วไปสำหรับบ้านพักอาศัยจะใช้เวลาติดตั้งประมาณ 1-3 วัน ขึ้นอยู่กับขนาดของระบบและความซับซ้อนของหน้างาน</p>
+                        <p>โดยทั่วไปสำหรับบ้านพักอาศัยจะใช้เวลาติดตั้งประมาณ 1-3 วัน
+                            ขึ้นอยู่กับขนาดของระบบและความซับซ้อนของหน้างาน</p>
                     </div>
                     <div class="faq-item">
                         <h4>คุ้มค่ากับการลงทุนหรือไม่?</h4>
-                        <p>คุ้มค่าแน่นอน โดยทั่วไปมีระยะเวลาคืนทุนเฉลี่ย 5-7 ปี หลังจากนั้นคือการใช้ไฟฟ้าฟรีไปตลอดอายุการใช้งานของแผงซึ่งยาวนานกว่า 25 ปี</p>
+                        <p>คุ้มค่าแน่นอน โดยทั่วไปมีระยะเวลาคืนทุนเฉลี่ย 5-7 ปี
+                            หลังจากนั้นคือการใช้ไฟฟ้าฟรีไปตลอดอายุการใช้งานของแผงซึ่งยาวนานกว่า 25 ปี</p>
                     </div>
                 </div>
             </div>
@@ -262,4 +322,5 @@
     </footer>
 
 </body>
+
 </html>
