--- a/.vscode/app/about.html
+++ b/.vscode/app/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header class="main-header">
@@ -19,15 +21,57 @@
                     <span>VERTEX TECHNOLOGY</span>
                 </a>
                 <div class="nav-links">
-                    <a href="index.html" class="active">หน้าหลัก</a>
-                    <a href="about.html">เกี่ยวกับเรา</a>
+                    <a href="index.html">หน้าหลัก</a>
+                    <a href="about.html" class="active">เกี่ยวกับเรา</a>
                     <a href="services.html">บริการของเรา</a>
-                    <a href="knowledge.html">เกร็ดความรู้</a>
                     <a href="contact.html">ติดต่อเรา</a>
                 </div>
             </div>
         </nav>
     </header>
-    <h1>about</h1>
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="img/blackground1.jpg" style="width:100%">
+  <div class="slideshow-text">Muhahaha</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="img/blackground2.jpg" style="width:100%">
+    <div class="slideshow-text">wahahaha</div>
+</div>
+
+</div>
+<br>
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
+<h1>about</h1>
+
+   <script>
+let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+
 </body>
 </html>
