--- a/.vscode/app/contact.html
+++ b/.vscode/app/contact.html
@@ -22,7 +22,6 @@
                     <a href="index.html">หน้าหลัก</a>
                     <a href="about.html">เกี่ยวกับเรา</a>
                     <a href="services.html">บริการของเรา</a>
-                    <a href="knowledge.html">เกร็ดความรู้</a>
                     <a href="contact.html" class="active">ติดต่อเรา</a>
                 </div>
             </div>
@@ -50,7 +49,7 @@
                 <div class="other-contacts">
                     <p>หรือติดต่อผ่านช่องทางอื่น</p>
                     <p><strong>โทร:</strong> <a href="tel:02-123-4567">02-123-4567</a></p>
-                    <p><strong>อีเมล:</strong> <a href="mailto:contact@vertextech.co.th">contact@vertextech.co.th</a></p>
+                    <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
                 </div>
 
             </div>
