--- a/.vscode/app/index.html
+++ b/.vscode/app/index.html
@@ -24,7 +24,6 @@
                     <a href="index.html" class="active">หน้าหลัก</a>
                     <a href="about.html">เกี่ยวกับเรา</a>
                     <a href="services.html">บริการของเรา</a>
-                    <a href="knowledge.html">เกร็ดความรู้</a>
                     <a href="contact.html">ติดต่อเรา</a>
                 </div>
             </div>
@@ -62,7 +61,7 @@
             </div>
         </section>
 
-        <section id="promotions" class="promotions-section">
+        <section id="services" class="promotions-section">
             <div class="container">
                 <h2>บริการของเรา</h2>
                 <div class="promo-grid">
@@ -195,7 +194,7 @@
                             </ul>
                         </div>
                         <div class="promo-card-footer">
-                            <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                            <a href="contact.html" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
                         </div>
                     </div>
 
@@ -220,7 +219,7 @@
                             </ul>
                         </div>
                         <div class="promo-card-footer">
-                            <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                            <a href="contact.html" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
                         </div>
                     </div>
 
@@ -245,7 +244,7 @@
                             </ul>
                         </div>
                         <div class="promo-card-footer">
-                            <a href="#" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
+                            <a href="contact.html" class="btn btn-secondary">สนใจแพ็กเกจนี้</a>
                         </div>
                     </div>
 
@@ -311,11 +310,10 @@
             <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong></p>
             <p><strong>ที่อยู่:</strong> ใส่ที่อยู่บริษัทของคุณที่นี่</p>
             <p><strong>เบอร์โทรศัพท์:</strong> <a href="tel:02-123-4567">02-123-4567</a></p>
-            <p><strong>อีเมล:</strong> <a href="mailto:contact@vertextech.co.th">contact@vertextech.co.th</a></p>
+            <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
             <div class="social-links">
                 <a href="#">Facebook</a>
                 <a href="#">LINE</a>
-                <a href="#">Instagram</a>
             </div>
             <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
         </div>
