--- a/.vscode/app/about.html
+++ b/.vscode/app/about.html
@@ -2,76 +2,95 @@
 <html lang="th">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VT Solar - บริการติดตั้งโซล่าเซลล์ครบวงจร</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>เกี่ยวกับเรา - VT Solar</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <header class="main-header">
-        <nav class="main-nav">
-            <div class="container nav-container">
-                <a href="index.html" class="nav-logo">
-                    <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
-                    <span>VERTEX TECHNOLOGY</span>
-                </a>
-                <div class="nav-links">
-                    <a href="index.html">หน้าหลัก</a>
-                    <a href="about.html" class="active">เกี่ยวกับเรา</a>
-                    <a href="services.html">บริการของเรา</a>
-                    <a href="contact.html">ติดต่อเรา</a>
-                </div>
+  <header class="main-header">
+    <nav class="main-nav">
+      <div class="container nav-container">
+        <a href="index.html" class="nav-logo">
+          <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
+          <span>VERTEX TECHNOLOGY</span>
+        </a>
+        <div class="nav-links">
+          <a href="index.html">หน้าหลัก</a>
+          <a href="about.html" class="active">เกี่ยวกับเรา</a>
+          <a href="services.html">บริการของเรา</a>
+          <a href="contact.html">ติดต่อเรา</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="about-page-section">
+      <div class="container">
+        <h2 class="about-page-title">เกี่ยวกับ VERTEX TECHNOLOGY</h2>
+        <div class="two-column-layout">
+          <div class="column-left">
+            <img src="img/office.webp" alt="ภาพบริษัท Vertex Technology Plus">
+          </div>
+          <div class="column-right">
+            <h3>ผู้นำด้านบริการพลังงานสะอาดครบวงจร</h3>
+            <p>
+              เราคือ VERTEX TECHNOLOGY PLUS CO, LTD ผู้เชี่ยวชาญด้านพลังงานหมุนเวียน พร้อมให้บริการครบวงจร (One Stop
+              Service) ตั้งแต่ออกแบบ, ติดตั้ง, และซ่อมบำรุงระบบโซลาร์เซลล์และ EV Charger
+              ด้วยทีมงานวิศวกรมืออาชีพและรับประกันผลงานยาวนานถึง 25 ปี
+            </p>
+            <p>
+              เรามุ่งมั่นในการให้บริการด้านพลังงานหมุนเวียนอย่างมีคุณภาพสูง เพื่อตอบสนองทุกความต้องการของลูกค้า
+              และเป็นส่วนหนึ่งในการขับเคลื่อนสังคมไทยสู่การใช้พลังงานสะอาดอย่างยั่งยืน
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about-page-section bg-light">
+      <div class="container">
+        <h2 class="about-page-title">ที่ตั้งสำนักงาน</h2>
+        <div class="two-column-layout">
+          <div class="column-left">
+            <h3>ติดต่อเราได้ที่</h3>
+            <div class="address-details">
+              
+              <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong></p>
+              <p>เลขที่ 123 ถนนสุขุมวิท ตำบล บางคูรัด <br>อำเภอบางบัวทอง นนทบุรี 11110</p>
+              <p><strong>เวลาทำการ:</strong> จันทร์ - ศุกร์, 9:00 - 18:00 น.</p>
+              <p><strong>โทร:</strong> <a href="tel:021234567">02-123-4567</a></p>
+              <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
             </div>
-        </nav>
-    </header>
-<div class="slideshow-container">
+          </div>
+          <div class="column-right">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d369.71422091363087!2d100.35996521813857!3d13.91177864195529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e28f0022e3cf2f%3A0xdf957d318ba17251!2z4Lia4Lij4Li04Lip4Lix4LiXIOC5geC4nuC4peC4leC4leC4tOC4meC4seC5iOC4oSDguITguK3guKHguKHguLnguJnguLTguYDguITguIrguLHguYjguJkg4LiI4Liz4LiB4Lix4LiU!5e0!3m2!1sth!2sth!4v1751299609497!5m2!1sth!2sth"
+              width="600" 
+              height="450" 
+              style="border:0;" 
+              allowfullscreen="" 
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="img/blackground1.jpg" style="width:100%">
-  <div class="slideshow-text">Muhahaha</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="img/blackground2.jpg" style="width:100%">
-    <div class="slideshow-text">wahahaha</div>
-</div>
-
-</div>
-<br>
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
-<h1>about</h1>
-
-   <script>
-let slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
-</script>
+  <footer id="contact-footer">
+    <div class="container">
+      <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
+    </div>
+  </footer>
 
 </body>
+
 </html>
