--- a/.vscode/app/about.html
+++ b/.vscode/app/about.html
@@ -17,13 +17,13 @@
     <nav class="main-nav">
       <div class="container nav-container">
         <a href="index.html" class="nav-logo">
-          <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
-          <span>VERTEX TECHNOLOGY</span>
+          <img src="img/logo.jpg" alt="โลโก้บริษัท">
+          <span>VERTEX TECHNOLOGY PLUS</span>
         </a>
         <div class="nav-links">
           <a href="index.html">หน้าหลัก</a>
           <a href="about.html" class="active">เกี่ยวกับเรา</a>
-          <a href="services.html">บริการของเรา</a>
+          <!-- <a href="services.html">บริการของเรา</a> -->
           <a href="contact.html">ติดต่อเรา</a>
         </div>
       </div>
@@ -33,7 +33,7 @@
   <main>
     <section class="about-page-section">
       <div class="container">
-        <h2 class="about-page-title">เกี่ยวกับ VERTEX TECHNOLOGY</h2>
+        <h2 class="about-page-title">เกี่ยวกับ VERTEX TECHNOLOGY PLIS</h2>
         <div class="two-column-layout">
           <div class="column-left">
             <img src="img/office.webp" alt="ภาพบริษัท Vertex Technology Plus">
@@ -42,7 +42,7 @@
             <h3>ผู้นำด้านบริการพลังงานสะอาดครบวงจร</h3>
             <p>
               เราคือ VERTEX TECHNOLOGY PLUS CO, LTD ผู้เชี่ยวชาญด้านพลังงานหมุนเวียน พร้อมให้บริการครบวงจร (One Stop
-              Service) ตั้งแต่ออกแบบ, ติดตั้ง, และซ่อมบำรุงระบบโซลาร์เซลล์และ EV Charger
+              Service) ตั้งแต่ออกแบบ, ติดตั้ง, และซ่อมบำรุงระบบโซลาร์เซลล์
               ด้วยทีมงานวิศวกรมืออาชีพและรับประกันผลงานยาวนานถึง 25 ปี
             </p>
             <p>
@@ -63,9 +63,9 @@
             <div class="address-details">
               
               <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong></p>
-              <p>เลขที่ 123 ถนนสุขุมวิท ตำบล บางคูรัด <br>อำเภอบางบัวทอง นนทบุรี 11110</p>
+              <p>เลขที่ 32/31 ซอยวัดลาดปลาดุก ตำบล บางคูรัด <br>อำเภอบางบัวทอง นนทบุรี 11110</p>
               <p><strong>เวลาทำการ:</strong> จันทร์ - ศุกร์, 9:00 - 18:00 น.</p>
-              <p><strong>โทร:</strong> <a href="tel:021234567">02-123-4567</a></p>
+              <!-- <p><strong>โทร:</strong> <a href="tel:021234567">02-123-4567</a></p> -->
               <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
             </div>
           </div>
