--- a/.vscode/app/index.html
+++ b/.vscode/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VERTEX TECHNOLOGY</title>
+    <title>VERTEX TECHNOLOGY PLUS</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,13 +17,13 @@
         <nav class="main-nav">
             <div class="container nav-container">
                 <a href="index.html" class="nav-logo">
-                    <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
-                    <span>VERTEX TECHNOLOGY</span>
+                    <!-- <img src="img/logo.jpg" alt="โลโก้บริษัท"> -->
+                    <span>VERTEX TECHNOLOGY PLUS</span>
                 </a>
                 <div class="nav-links">
                     <a href="index.html" class="active">หน้าหลัก</a>
                     <a href="about.html">เกี่ยวกับเรา</a>
-                    <a href="services.html">บริการของเรา</a>
+                    <!-- <a href="services.html">บริการของเรา</a> -->
                     <a href="contact.html">ติดต่อเรา</a>
                 </div>
             </div>
@@ -52,9 +52,9 @@
                     <div class="about-portfolio">
                         <h3>ตัวอย่างผลงาน</h3>
                         <div class="portfolio-grid">
-                            <img src="https://placehold.co/400x300/cccccc/333?text=ผลงาน+1" alt="ผลงานการติดตั้ง 1">
-                            <img src="https://placehold.co/400x300/cccccc/333?text=ผลงาน+2" alt="ผลงานการติดตั้ง 2">
-                            <img src="https://placehold.co/400x300/cccccc/333?text=ผลงาน+3" alt="ผลงานการติดตั้ง 3">
+                            <img src="img/example-work1.jpg" alt="ผลงานการติดตั้ง 1">
+                            <img src="img/example-work2.jpg" alt="ผลงานการติดตั้ง 2">
+                            <img src="img/example-work3.jpg" alt="ผลงานการติดตั้ง 3">
                         </div>
                     </div>
                 </div>
@@ -308,12 +308,12 @@
         <div class="container">
             <h2>ช่องทางการติดต่อ</h2>
             <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong></p>
-            <p><strong>ที่อยู่:</strong> ใส่ที่อยู่บริษัทของคุณที่นี่</p>
-            <p><strong>เบอร์โทรศัพท์:</strong> <a href="tel:02-123-4567">02-123-4567</a></p>
+            <p><strong>ที่อยู่:</strong> เลขที่ 32/31 ซอยวัดลาดปลาดุก ตำบล บางคูรัด อำเภอบางบัวทอง นนทบุรี 11110</p>
+            <!-- <p><strong>เบอร์โทรศัพท์:</strong> <a href="tel:02-123-4567">02-123-4567</a></p> -->
             <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
             <div class="social-links">
-                <a href="#">Facebook</a>
-                <a href="#">LINE</a>
+                <a href  ="https://www.facebook.com/profile.php?id=61578091313541">Facebook</a>
+                <a href="https://lin.ee/5a80dQe">LINE</a>
             </div>
             <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
         </div>
