--- a/.vscode/app/about.html
+++ b/.vscode/app/about.html
@@ -17,7 +17,7 @@
     <nav class="main-nav">
       <div class="container nav-container">
         <a href="index.html" class="nav-logo">
-          <img src="img/logo.jpg" alt="โลโก้บริษัท">
+          <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
           <span>VERTEX TECHNOLOGY PLUS</span>
         </a>
         <div class="nav-links">
