--- a/app/contact.html
+++ b/app/contact.html
@@ -1,3 +1,4 @@
+<main>
 <section class="contact-page-section">
     <div class="container contact-container">
         <h2>ติดต่อเรา</h2>
@@ -19,12 +20,11 @@
             <p>หรือติดต่อผ่านช่องทางอื่น</p>
             <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
         </div>
-
     </div>
 </section>
-
-<footer class="page-specific-footer">
+</main>
+  <footer id="contact-footer">
     <div class="container">
-        <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
+      <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
     </div>
-</footer>
+  </footer>
