--- a/app/home-content.html
+++ b/app/home-content.html
@@ -1,3 +1,4 @@
+<main>
 <section class="hero-slide">
       <div class="hero-content">
         <h1>VERTEX TECHNOLOGY PLUS</h1>
@@ -97,8 +98,8 @@
         </div>
       </div>
     </section>
-
-      <footer id="contact">
+    </main>
+          <footer id="contact">
     <div class="container">
       <h2>ช่องทางการติดต่อ</h2>
       <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong></p>
@@ -112,3 +113,4 @@
       <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
     </div>
   </footer>
+  
