--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,11 @@
     </nav>
   </header>
 
-  <main id="app-content">
+<main id="app-content">
 
-  </main>
+</main>
+<footer id="page-footer"></footer>
+
 
 
   <script src="scripts.js"></script>
