--- a/app/profile.html
+++ b/app/profile.html
@@ -2,10 +2,17 @@
     <section class="profile-page-section">
         <div class="container profile-container">
             <h2>โปรไฟล์ของฉัน</h2>
-
+            
             <div id="user-profile-data" class="profile-data-grid">
                 <p>กำลังโหลดข้อมูล...</p>
             </div>
+
+            <div class="profile-actions">
+                <a href="new-order.html" class="btn btn-primary nav-link">สร้างคิวงานใหม่</a>
+                <a href="#" id="logout-button" class="btn btn-danger">ออกจากระบบ</a>
+            </div>
+
+            <hr>
 
             <h3>สถานะงานของคุณ</h3>
             <div id="user-orders-list" class="orders-list">
