--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VERTEX TECHNOLOGY PLUS</title>
-  <link rel="icon" type="img/png" href="img/favicon.png">
+  <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
   <header class="main-header">
     <nav class="main-nav">
       <div class="container nav-container">
-        <a href="index.html" class="nav-logo">
+        <a href="#home-content.html" class="nav-logo nav-link">
           <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
           <span>VERTEX TECHNOLOGY PLUS</span>
         </a>
@@ -25,19 +25,19 @@
           <a href="home-content.html" class="nav-link active">หน้าหลัก</a>
           <a href="about.html" class="nav-link">เกี่ยวกับเรา</a>
           <a href="contact.html" class="nav-link">ติดต่อเรา</a>
+          <a href="add-order.html" class="nav-link">สั่งซื้อบริการ</a>
         </div>
       </div>
     </nav>
   </header>
 
-<main id="app-content">
-
-</main>
-<footer id="page-footer"></footer>
-
-
+  <main id="app-content">
+    </main>
+  
+  <footer id="page-footer">
+    </footer>
 
   <script src="scripts.js"></script>
+</body>
 
-ิ</body>
 </html>
