--- a/app/add-order.html
+++ b/app/add-order.html
@@ -1,6 +1,6 @@
 <main>
     <section class="order-form-section">
-        <div class="container">
+        <div class="order-container">
             <h2>สั่งซื้อบริการติดตั้งโซล่าเซลล์</h2>
             <p>กรุณากรอกข้อมูลด้านล่างให้ครบถ้วนเพื่อให้เจ้าหน้าที่ติดต่อกลับ</p>
 
@@ -34,7 +34,7 @@
                     <textarea id="order-notes" name="customerNotes" rows="3"></textarea>
                 </fieldset>
 
-                <button type="submit" class="btn btn-primary">ส่งข้อมูล</button>
+                <button type="submit" class="btn btn-primary-order">ส่งข้อมูล</button>
 
                 <div id="order-feedback" class="form-feedback"></div>
             </form>
