--- a/app/home-content.html
+++ b/app/home-content.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </section>
-        
+
     <section id="services" class="promotions-section">
       <div class="container">
         <h2>บริการของเรา</h2>
@@ -99,3 +99,18 @@
             </div>
         </section>
     </main>
+    
+    <footer id="contact">
+        <div class="container">
+            <h2>ช่องทางการติดต่อ</h2>
+            <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong></p>
+            <p><strong>ที่อยู่:</strong> เลขที่ 32/31 ซอยวัดลาดปลาดุก ตำบล บางคูรัด อำเภอบางบัวทอง นนทบุรี 11110</p>
+            <!-- <p><strong>เบอร์โทรศัพท์:</strong> <a href="tel:02-123-4567">02-123-4567</a></p> -->
+            <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
+            <div class="social-links">
+                <a href  ="https://www.facebook.com/profile.php?id=61578091313541">Facebook</a>
+                <a href="https://lin.ee/5a80dQe">LINE</a>
+            </div>
+            <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
+        </div>
+    </footer>
