--- a/app/add-order.html
+++ b/app/add-order.html
@@ -18,7 +18,7 @@
                     <input type="tel" id="order-contact-phone" name="contactPhone" required>
 
                     <label for="citizenIdImage">รูปบัตรประจำตัวประชาชน:</label>
-<input type="file" id="citizenIdImage" name="files.citizenIdImage" accept="image/png, image/jpeg" required>
+                    <input type="file" id="citizenIdImage" name="files.citizenId" accept="image/png, image/jpeg" required>
 <p style="font-size: 0.8em; color: #666;">(รองรับไฟล์ .jpg และ .png เท่านั้น)</p>
 <img id="imagePreview" src="" alt="ตัวอย่างรูปภาพ" style="max-width: 200px; margin-top: 10px; display: none;">
                 </fieldset>
@@ -41,3 +41,8 @@
         </div>
     </section>
 </main>
+  <footer id="contact-footer">
+    <div class="container">
+      <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
+    </div>
+  </footer>
