--- a/app/add-order.html
+++ b/app/add-order.html
@@ -34,7 +34,7 @@
                     <textarea id="order-notes" name="customerNotes" rows="3"></textarea>
                 </fieldset>
 
-                <button type="submit" class="btn btn-primary-order">ส่งข้อมูล</button>
+                <button type="submit" class="btn btn-primary-order">เพิ่มคิวงาน</button>
 
                 <div id="order-feedback" class="form-feedback"></div>
             </form>
