--- a/app/home-content.html
+++ b/app/home-content.html
@@ -103,7 +103,7 @@
     <footer id="contact">
         <div class="container">
             <h2>ช่องทางการติดต่อ</h2>
-            <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong> <a href="login.html" class="nav-link">.</a></p>
+            <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong> <a href="#login.html" class="nav-link">.</a></p>
             <p><strong>ที่อยู่:</strong> เลขที่ 32/31 ซอยวัดลาดปลาดุก ตำบล บางคูรัด อำเภอบางบัวทอง นนทบุรี 11110</p>
             <!-- <p><strong>เบอร์โทรศัพท์:</strong> <a href="tel:02-123-4567">02-123-4567</a></p> -->
             <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
