--- a/app/index.html
+++ b/app/index.html
@@ -14,22 +14,25 @@
 
 <body>
 
-  <header class="main-header">
+<header class="main-header">
     <nav class="main-nav">
-      <div class="container nav-container">
-        <a href="#home-content.html" class="nav-logo nav-link">
-          <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
-          <span>VERTEX TECHNOLOGY PLUS</span>
-        </a>
-        <div class="nav-links">
-          <a href="home-content.html" class="nav-link active">หน้าหลัก</a>
-          <a href="about.html" class="nav-link">เกี่ยวกับเรา</a>
-          <a href="contact.html" class="nav-link">ติดต่อเรา</a>
-          <a href="add-order.html" class="nav-link">สั่งซื้อบริการ</a>
+        <div class="container nav-container">
+            <a href="#home-content.html" class="nav-logo nav-link">
+                <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
+                <span>VERTEX TECHNOLOGY PLUS</span>
+            </a>
+            <div class="nav-links">
+                <a href="#home-content.html" class="nav-link active">หน้าหลัก</a>
+                <a href="#about.html" class="nav-link">เกี่ยวกับเรา</a>
+                <a href="#contact.html" class="nav-link">ติดต่อเรา</a>
+                <a href="#add-order.html" class="nav-link">สั่งซื้อบริการ</a>
+            </div>
+            <button class="nav-toggle" aria-label="Toggle navigation">
+                <span class="hamburger"></span>
+            </button>
         </div>
-      </div>
     </nav>
-  </header>
+</header>
 
   <main id="app-content">
     </main>
