--- a/app/login.html
+++ b/app/login.html
@@ -17,3 +17,8 @@
         </div>
     </section>
 </main>
+<footer id="contact-footer">
+    <div class="container">
+      <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
+    </div>
+  </footer>
