--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
                 <a href="#home-content.html" class="nav-link active">หน้าหลัก</a>
                 <a href="#about.html" class="nav-link">เกี่ยวกับเรา</a>
                 <a href="#contact.html" class="nav-link">ติดต่อเรา</a>
-                <a href="#add-order.html" class="nav-link">สั่งซื้อบริการ</a>
+                <!-- <a href="#add-order.html" class="nav-link">สั่งซื้อบริการ</a> -->
             </div>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span class="hamburger"></span>
